--- a/Cargo.toml
+++ b/Cargo.toml
@@ -130,7 +130,7 @@ paste = "1.0"
 pd_client = { workspace = true }
 pin-project = "1.0"
 pnet_datalink = "0.23"
-pprof = { git = "https://github.com/CalvinNeo/pprof-rs", branch = "master", default-features = false, features = ["flamegraph", "protobuf-codec"] }
+pprof = { version = "0.11", default-features = false, features = ["flamegraph", "protobuf-codec"] }
 prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 prost = "0.7"
@@ -223,6 +223,8 @@ fs2 = { git = "https://github.com/tabokie/fs2-rs", branch = "tikv" }
 # Remove this when a new version is release. We need to solve rust-lang/cmake-rs#143.
 cmake = { git = "https://github.com/rust-lang/cmake-rs" }
 
+crossbeam-deque = { git = "https://github.com/crossbeam-rs/crossbeam", rev = "41ed3d948720f26149b2ebeaf58fe8a193134056" }
+
 [workspace]
 members = [
   "components/api_version",
@@ -298,72 +300,72 @@ members = [
 default-members = ["raftstore-proxy"]
 
 [workspace.dependencies]
-api_version = { path = "components/api_version" }
-aws = { path = "components/cloud/aws" }
-azure = { path = "components/cloud/azure" }
-backup = { path = "components/backup", default-features = false }
-backup-stream = { path = "components/backup-stream", default-features = false }
-batch-system = { path = "components/batch-system" }
-case_macros = { path = "components/case_macros" }
-causal_ts = { path = "components/causal_ts" }
-cdc = { path = "components/cdc", default-features = false }
-cloud = { path = "components/cloud" }
-codec = { path = "components/codec" }
-collections = { path = "components/collections" }
-concurrency_manager = { path = "components/concurrency_manager" }
-coprocessor_plugin_api = { path = "components/coprocessor_plugin_api" }
-encryption = { path = "components/encryption" }
-encryption_export = { path = "components/encryption/export" }
-engine_panic = { path = "components/engine_panic" }
-engine_rocks = { path = "components/engine_rocks" }
-engine_rocks_helper = { path = "components/engine_rocks_helper" }
-engine_test = { path = "components/engine_test", default-features = false }
-engine_traits = { path = "components/engine_traits" }
-engine_traits_tests = { path = "components/engine_traits_tests", default-features = false }
-error_code = { path = "components/error_code" }
-external_storage = { path = "components/external_storage" }
-external_storage_export = { path = "components/external_storage/export" }
-file_system = { path = "components/file_system" }
-gcp = { path = "components/cloud/gcp" }
-into_other = { path = "components/into_other" }
-keys = { path = "components/keys" }
-log_wrappers = { path = "components/log_wrappers" }
-memory_trace_macros = { path = "components/memory_trace_macros" }
-online_config = { path = "components/online_config" }
-panic_hook = { path = "components/panic_hook" }
-pd_client = { path = "components/pd_client" }
-profiler = { path = "components/profiler" }
-raft_log_engine = { path = "components/raft_log_engine" }
-raftstore = { path = "components/raftstore", default-features = false }
-raftstore_v2 = { path = "components/raftstore-v2", default-features = false }
-resolved_ts = { path = "components/resolved_ts" }
-resource_metering = { path = "components/resource_metering" }
-security = { path = "components/security" }
-server = { path = "components/server" }
-snap_recovery = { path = "components/snap_recovery" }
-sst_importer = { path = "components/sst_importer" }
-test_backup = { path = "components/test_backup" }
-test_coprocessor = { path = "components/test_coprocessor", default-features = false }
-example_coprocessor_plugin = { path = "components/test_coprocessor_plugin/example_plugin" }
-test_pd = { path = "components/test_pd" }
-test_pd_client = { path = "components/test_pd_client" }
-test_raftstore = { path = "components/test_raftstore", default-features = false }
-test_sst_importer = { path = "components/test_sst_importer" }
-test_storage = { path = "components/test_storage", default-features = false }
-test_util = { path = "components/test_util" }
-tidb_query_aggr = { path = "components/tidb_query_aggr" }
-tidb_query_codegen = { path = "components/tidb_query_codegen" }
-tidb_query_common = { path = "components/tidb_query_common" }
-tidb_query_datatype = { path = "components/tidb_query_datatype" }
-tidb_query_executors = { path = "components/tidb_query_executors" }
-tidb_query_expr = { path = "components/tidb_query_expr" }
-tikv = { path = ".", default-features = false }
-tikv_alloc = { path = "components/tikv_alloc" }
-tikv_kv = { path = "components/tikv_kv", default-features = false }
-tikv_util = { path = "components/tikv_util" }
-tipb_helper = { path = "components/tipb_helper" }
-tracker = { path = "components/tracker" }
-txn_types = { path = "components/txn_types" }
+api_version = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+aws = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+azure = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+backup = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+backup-stream = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+batch-system = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+case_macros = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+causal_ts = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+cdc = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+cloud = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+codec = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+collections = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+concurrency_manager = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+coprocessor_plugin_api = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+encryption = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+encryption_export = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+engine_panic = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+engine_rocks = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+engine_rocks_helper = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+engine_test = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+engine_traits = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+engine_traits_tests = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+error_code = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+external_storage = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+external_storage_export = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+file_system = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+gcp = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+into_other = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+keys = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+log_wrappers = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+memory_trace_macros = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+online_config = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+panic_hook = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+pd_client = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+profiler = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+raft_log_engine = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+raftstore = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+raftstore_v2 = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+resolved_ts = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+resource_metering = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+security = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+server = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+snap_recovery = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+sst_importer = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+test_backup = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+test_coprocessor = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+example_coprocessor_plugin = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+test_pd = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+test_pd_client = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+test_raftstore = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+test_sst_importer = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+test_storage = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+test_util = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tidb_query_aggr = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tidb_query_codegen = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tidb_query_common = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tidb_query_datatype = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tidb_query_executors = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tidb_query_expr = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tikv = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+tikv_alloc = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tikv_kv = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e", default-features = false }
+tikv_util = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tipb_helper = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+tracker = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
+txn_types = { git = "https://github.com/tikv/tikv.git", rev = "e87d16d0b17e507e4fea0923c8438ddfd0296a0e" }
 # External libs
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 
