--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -30,6 +30,7 @@ cloud-azure = ["raftstore/cloud-azure"]
 
 [dependencies]
 batch-system = { workspace = true }
+bytes = "1.0"
 collections = { workspace = true }
 crossbeam = "0.8"
 engine_traits = { workspace = true }
@@ -40,18 +41,19 @@ futures = { version = "0.3", features = ["compat"] }
 keys = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 log_wrappers = { workspace = true }
+parking_lot = "0.12"
 pd_client = { workspace = true }
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-proto = { version = "0.7.0" }
 raftstore = { workspace = true }
+rand = "0.8.3"
 slog = "2.3"
 smallvec = "1.4"
 tikv_util = { workspace = true }
 time = "0.1"
 tracker = { workspace = true }
 txn_types = { workspace = true }
-bytes = "1.0"
 
 [dev-dependencies]
 engine_test = { workspace = true }
