--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,8 +97,8 @@ futures-timer = "3.0"
 futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
 fxhash = "0.2.1"
 getset = "0.1"
-grpcio = { version = "0.10.3", default-features = false, features = ["openssl-vendored", "protobuf-codec", "nightly"] }
-grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
+grpcio = { workspace = true }
+grpcio-health = { workspace = true }
 hex = "0.4"
 http = "0"
 hyper = { version = "0.14", features = ["full"] }
@@ -215,6 +215,9 @@ cmake = { git = "https://github.com/rust-lang/cmake-rs" }
 # This is a workaround for cargo can't resolving the this patch in yatp.
 crossbeam-deque = { git = "https://github.com/crossbeam-rs/crossbeam", rev = "41ed3d948720f26149b2ebeaf58fe8a193134056" }
 
+grpcio = { git = "https://github.com/BusyJay/grpc-rs", branch = "allow-access-channel" }
+grpcio-health = { git = "https://github.com/BusyJay/grpc-rs", branch = "allow-access-channel" }
+
 [target.'cfg(target_os = "linux")'.dependencies]
 procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229b2c1fcc44118bef7eff127128" }
 # When you modify TiKV cooperatively with kvproto, this will be useful to submit the PR to TiKV and the PR to
@@ -222,6 +225,10 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229
 # After the PR to kvproto is merged, remember to comment this out and run `cargo update -p kvproto`.
 [patch.'https://github.com/pingcap/kvproto']
 # kvproto = { git = "https://github.com/your_github_id/kvproto", branch = "your_branch" }
+kvproto = { git = "https://github.com/tabokie/kvproto", branch = "221117-grpcio-12" }
+
+[patch.'https://github.com/pingcap/tipb']
+tipb = { git = "https://github.com/tabokie/tipb", branch = "221117-grpcio-12" }
 
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
@@ -368,7 +375,8 @@ tipb_helper = { path = "components/tipb_helper" }
 tracker = { path = "components/tracker" }
 txn_types = { path = "components/txn_types" }
 # External libs
-grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { version = "0.12", default-features = false, features = ["openssl-vendored", "protobuf-codec", "nightly"] }
+grpcio-health = { version = "0.12", default-features = false, features = ["protobuf-codec"] }
 
 [profile.dev.package.grpcio-sys]
 debug = false
