--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -53,7 +53,7 @@ file_system = { workspace = true }
 fs2 = "0.4"
 futures = "0.3"
 grpcio = { workspace = true }
-grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
+grpcio-health = { workspace = true }
 hex = "0.4"
 keys = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
