--- a/Cargo.toml
+++ b/Cargo.toml
@@ -217,6 +217,7 @@ crossbeam-deque = { git = "https://github.com/crossbeam-rs/crossbeam", rev = "41
 
 grpcio = { git = "https://github.com/BusyJay/grpc-rs", branch = "allow-access-channel" }
 grpcio-health = { git = "https://github.com/BusyJay/grpc-rs", branch = "allow-access-channel" }
+grpcio-compiler = { git = "https://github.com/BusyJay/grpc-rs", branch = "allow-access-channel" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229b2c1fcc44118bef7eff127128" }
