--- a/components/resource_control/Cargo.toml
+++ b/components/resource_control/Cargo.toml
@@ -12,6 +12,7 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.0"
 pin-project = "1.0"
 prometheus = { version = "0.13", features = ["nightly"] }
+serde = { version = "1.0", features = ["derive"] }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tikv_util = { workspace = true }
