--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -52,7 +52,7 @@ fs2 = "0.4"
 futures = "0.3"
 futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
 getset = "0.1"
-grpcio-health = { workspace = true }
+grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
 into_other = { workspace = true }
 itertools = "0.10"
 keys = { workspace = true }
