--- a/components/test_raftstore/Cargo.toml
+++ b/components/test_raftstore/Cargo.toml
@@ -38,7 +38,7 @@ fail = "0.5"
 file_system = { workspace = true }
 futures = "0.3"
 grpcio = { workspace = true }
-grpcio-health = { workspace = true }
+grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
 keys = { workspace = true }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
