--- a/metrics/alertmanager/tikv.accelerate.rules.yml
+++ b/metrics/alertmanager/tikv.accelerate.rules.yml
@@ -26,9 +26,9 @@ groups:
     - record: tikv_worker_handled_task:1m
       expr: sum(rate(tikv_worker_handled_task_total{instance=~".*"}[1m])) by (name)
     - record: tikv_engine_num_files_at_level:kv:avg
-      expr: avg(tikv_engine_num_files_at_level{instance=~".*", db="kv"}) by (cf, level)
+      expr: avg(rate(tikv_engine_num_files_at_level_sum{instance=~".*", db="kv"}[1m])) by (cf, level)
     - record: tikv_engine_num_files_at_level:raft:avg
-      expr: avg(tikv_engine_num_files_at_level{instance=~".*", db="raft"}) by (cf, level)
+      expr: avg(rate(tikv_engine_num_files_at_level_sum{instance=~".*", db="raft"}[1m])) by (cf, level)
     - record: tikv_pd_request_duration_seconds:avg:1m
       expr: sum(rate(tikv_pd_request_duration_seconds_sum{instance=~".*"}[1m])) by (type) / sum(rate(tikv_pd_request_duration_seconds_count{instance=~".*"}[1m])) by (type)
     - record: tikv_coprocessor_request_wait_seconds:p95:1m
