--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -52,6 +52,7 @@ raftstore = { workspace = true }
 resource_metering = { workspace = true }
 slog = "2.3"
 smallvec = "1.4"
+thiserror = "1.0"
 tikv_util = { workspace = true }
 time = "0.1"
 tracker = { workspace = true }
