--- a/components/sst_importer/Cargo.toml
+++ b/components/sst_importer/Cargo.toml
@@ -31,6 +31,7 @@ lazy_static = "1.3"
 log_wrappers = { workspace = true }
 openssl = "0.10"
 prometheus = { version = "0.13", default-features = false }
+rand = "0.8"
 serde = "1.0"
 serde_derive = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
