--- a/components/batch-system/Cargo.toml
+++ b/components/batch-system/Cargo.toml
@@ -22,6 +22,7 @@ slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debu
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tikv_alloc = { workspace = true }
 tikv_util = { workspace = true }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 
 [dev-dependencies]
 criterion = "0.3"
