--- a/components/batch-system/Cargo.toml
+++ b/components/batch-system/Cargo.toml
@@ -17,6 +17,7 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
 online_config = { workspace = true }
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
+resource_control = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
