--- a/Cargo.toml
+++ b/Cargo.toml
@@ -376,28 +376,28 @@ yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
 
 [profile.dev.package.grpcio-sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.librocksdb_sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.libtitan_sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.tirocks-sys]
-opt-level = 0
-debug = true
+debug = false
+opt-level = 1
 
 [profile.dev.package.tests]
-opt-level = 0
-debug = true
+debug = 1
+opt-level = 1
 
 [profile.dev]
 opt-level = 0
-debug = true
+debug = 0
 codegen-units = 4
 lto = false
 incremental = true
@@ -423,7 +423,7 @@ codegen-units = 4
 
 [profile.test]
 opt-level = 0
-debug = true
+debug = 0
 codegen-units = 16
 lto = false
 incremental = true
