--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -30,6 +30,7 @@ cloud-azure = ["raftstore/cloud-azure"]
 
 [dependencies]
 batch-system = { workspace = true }
+bytes = "1.0"
 causal_ts = { workspace = true }
 collections = { workspace = true }
 concurrency_manager = { workspace = true }
@@ -43,12 +44,14 @@ futures = { version = "0.3", features = ["compat"] }
 keys = { workspace = true }
 kvproto = { workspace = true }
 log_wrappers = { workspace = true }
+parking_lot = "0.12"
 pd_client = { workspace = true }
 prometheus = { version = "0.13", features = ["nightly"] }
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-proto = { version = "0.7.0" }
 raftstore = { workspace = true }
+rand = "0.8.3"
 resource_metering = { workspace = true }
 slog = "2.3"
 smallvec = "1.4"
