--- a/components/pd_client/Cargo.toml
+++ b/components/pd_client/Cargo.toml
@@ -29,6 +29,7 @@ thiserror = "1.0"
 tikv_alloc = { workspace = true }
 tikv_util = { workspace = true }
 tokio = { version = "1", features = ["sync"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
 tokio-timer = { workspace = true }
 txn_types = { workspace = true }
 yatp = { workspace = true }
