--- a/Cargo.toml
+++ b/Cargo.toml
@@ -427,7 +427,7 @@ codegen-units = 4
 
 [profile.test]
 opt-level = 0
-debug = true 
+debug = 0
 codegen-units = 16
 lto = false
 incremental = true
